<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/rbNivel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nivel1" />

        <RadioButton
            android:id="@+id/rbNivel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nivel2" />

        <RadioButton
            android:id="@+id/rbNivel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nivel3" />

    </RadioGroup>
</LinearLayout>