<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_header_resumen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/resumen"
                android:textAlignment="center"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_header_resumen_posicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posicion"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_resumen_posicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_resumen_header_dificultad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resumen_dificultad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_resumen_header_duracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duracion"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resumen_duracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_resumen_header_vidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vidas"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resumen_vidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_resumen_header_fechaHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fechahora"
                android:textAlignment="textStart"
                android:gravity="start"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resumen_fechahora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"/>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>