<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ranking_posicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00"
            android:textAlignment="center"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ranking_header_dificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dificultad"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="77dp" />

            <TextView
                android:id="@+id/tv_ranking_dificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/tv_ranking_header_vidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vidas"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="77dp"
                tools:layout_editor_absoluteY="54dp" />

            <TextView
                android:id="@+id/tv_ranking_vidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="60dp" />

            <TextView
                android:id="@+id/tv_ranking_header_duracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duracion"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="77dp"
                tools:layout_editor_absoluteY="27dp" />

            <TextView
                android:id="@+id/tv_ranking_duracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/tv_ranking_header_fechaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fechahora"
                android:textSize="@dimen/tvHeader"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="249dp" />

            <TextView
                android:id="@+id/tv_ranking_fechahora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:layout_editor_absoluteX="249dp"
                tools:layout_editor_absoluteY="26dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>